[package]
name = "airbyte_client"
version = "0.0.2"
authors = ["OpenAPI Generator team and contributors"]
edition = "2021"
description = "Airbyte Client is an unofficial client library for the Airbyte API"
license = "MIT"
documentation = "https://docs.rs/crate/airbyte_client/latest"
homepage = "https://github.com/agyleOS/airbyte_client"
repository = "https://github.com/agyleOS/airbyte_client"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
